pthread_getcpuclockid is expected to return 0 code

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 11
    • Affects Version/s: 11
    • Component/s: hotspot
    • b22
    • linux

        jib > #
        jib > # A fatal error has been detected by the Java Runtime Environment:
        jib > #
        jib > # Internal Error (/scratch/opt/mach5/mesos/work_dir/slaves/c4ee7e63-1ded-4e8c-9581-ce26f27e3af4-S143/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/3d526e9e-65a2-4897-b530-b74b0f51029c/runs/3cfed237-5d06-41ef-be56-e53ef43b32c3/workspace/open/src/hotspot/os/linux/os_linux.cpp:5581), pid=4209, tid=4219
        jib > # assert(rc == 0) failed: pthread_getcpuclockid is expected to return 0 code

        Sample stack:

        Stack: [0x00007fd1c432e000,0x00007fd1c442e000], sp=0x00007fd1c442c090, free space=1016k
        Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [libjvm.so+0x1878277] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x2c7
        V [libjvm.so+0x18790df] VMError::report_and_die(Thread*, void*, char const*, int, char const*, char const*, __va_list_tag*)+0x2f
        V [libjvm.so+0xb4e320] report_vm_error(char const*, int, char const*, char const*, ...)+0x100
        V [libjvm.so+0xf87ecf] JfrTypeManager::write_type_set()+0x19f
        V [libjvm.so+0xf50099] JfrRecorderService::finalize_current_chunk_on_vm_error()+0x39
        V [libjvm.so+0xf501fe] JfrRecorderService::rotate(int)+0x7e
        V [libjvm.so+0xefe928] JfrEmergencyDump::on_vm_shutdown(bool)+0x278
        V [libjvm.so+0x1878535] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x585
        V [libjvm.so+0x18790df] VMError::report_and_die(Thread*, void*, char const*, int, char const*, char const*, __va_list_tag*)+0x2f
        V [libjvm.so+0xb4e320] report_vm_error(char const*, int, char const*, char const*, ...)+0x100
        V [libjvm.so+0x14c6360] os::thread_cpu_time(Thread*, bool)+0x80
        V [libjvm.so+0x17ad026] Thread::print_on(outputStream*, bool) const+0x46
        V [libjvm.so+0x17b23be] JavaThread::print_on(outputStream*, bool) const+0x13e
        V [libjvm.so+0x17b65e9] Threads::print_on(outputStream*, bool, bool, bool, bool)+0x1c9
        V [libjvm.so+0x18bd1e2] VM_Operation::evaluate()+0x132
        V [libjvm.so+0x18b884e] VMThread::evaluate_operation(VM_Operation*) [clone .constprop.51]+0x18e
        V [libjvm.so+0x18b9107] VMThread::loop()+0x4d7
        V [libjvm.so+0x18b9713] VMThread::run()+0xd3
        V [libjvm.so+0x14c7a60] thread_native_entry(Thread*)+0x100

        VM_Operation (0x00007fd1f2597a00): PrintThreads, mode: safepoint, requested by thread 0x00007fd1e803f000

              Assignee:
              David Holmes
              Reporter:
              Gerard Ziemski (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: