8205878: pthread_getcpuclockid is expected to return 0 code

Reviewed-by: cjplummer, amenkov, coleenp